# Semantic-Checker-for-Open-Data-using-Ollama

./: .env.example  .gitignore  BERT_SBERT_EVALUATION_GUIDE.md  README.md  dashboard.html  generate_clean_dataset.py  levenshtein_analysis.py  llama_prompting_analysis.py  main.py  pyproject.toml  requirements.txt  run_all_baselines_csv.py  visualize_results.py
.github/: copilot-instructions.md
baselines/: __init__.py  bert_base.py  jaro_winkler.py  levenshtein.py  ollama_prompting.py  sbert.py
datasets/: README.md
src/: __init__.py  data_processor.py  evaluator.py  ollama_client.py  semantic_analyzer.py
tests/: test_ollama_client.py
utils/: attribute_extraction.py  data_loader.py  evaluation.py  ground_truth_loader.py  stratified_sampler.py  string_matching.py
