[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-checker"
version = "0.1.0"
description = "Semantic attribute-name equivalence checker for Saxon Open Data portals"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "sentence-transformers>=2.7",
    "scikit-learn>=1.3",
    "tqdm>=4.65",
    "ollama>=0.2",
]

[project.scripts]
semantic-checker = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["utils*", "baselines*"]
